# torbrowser-launcher

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  MANIFEST  MANIFEST.in  Makefile.am  README  README.md  autogen.sh  build_and_install.sh  build_deb.sh  build_rpm.sh  configure.ac  git-tag_release.sh  makepot.sh  mirrors.txt  ppa_release.sh  pyproject.toml  requirements.txt  security_design.md  setup.py  stdeb.cfg  torbrowser-launcher  torbrowser-launcher.desktop.in  torbrowser.desktop  torbrowser_launcher.pot  torproject.pem  verify.sh  version
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python.yml
.gitlab/issue_templates/: Release Prep.md
apparmor/: license.txt  tor-browser.Browser.firefox  tor-browser.Tor.tor  tor-browser.start-tor-browser  torbrowser.Browser.firefox  torbrowser.Browser.plugin-container  torbrowser.Tor.tor  torbrowser.start-tor-browser  usr.bin.torbrowser-launcher
apparmor/local/: torbrowser.Browser.firefox  torbrowser.Browser.plugin-container  (+1 more)
debian/: changelog  control  copyright  rules  torbrowser-launcher.1  torbrowser-launcher.examples  torbrowser-launcher.manpages  watch
gnupg_homedir/: pubring.gpg  pubring.gpg~  trustdb.gpg
keys/: README  alexandre.asc  mike-2013-09.asc  sebastian.asc
misc/: erinn.asc  torbrowser32.xpm  torbrowser80.xpm
po/: ar.po  be.po  cs.po  da.po  de.po  fr.po  hr.po  hu.po  ja.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  tr.po  zh_CN.po  zh_TW.po
src/: torbrowser-launcher
torbrowser_launcher/: __init__.py  common.py  launcher.py  launcher_cli.py  settings.py
(+77 files in other folders)
