# The actual runnable program is set to the SCRIPTS primitive.
# Prefix bin_ tells where to copy this
bin_SCRIPTS = src/torbrowser-launcher

# List of files to be distributed
EXTRA_DIST=  \
	$(bin_SCRIPTS)

# The desktop files
desktopdir = $(datadir)/applications
desktop_DATA = \
	torbrowser-launcher.desktop

# The icons
iconsdir = $(datadir)/icons
icons_DATA = icons/torbrowser32.xpm icons/torbrowser80.xpm

